# Handmade-OpenGL

./: .gitignore  CMakeLists.txt  Handmade.sln  README.md
Assets/Materials/: Defaults.mtl
Handmade/: App.cpp  App.h  Audio.cpp  Audio.h  Axes.h  BoxCollider.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Capsule.h  Circle.h  Cuboid.cpp  Cuboid.h  Design.cpp  Design.h  FreeCamera.cpp  Grid.h  Handmade.vcxproj  Handmade.vcxproj.filters  Input.cpp  Light.h  Line.cpp  Line.h  LineSegment.h  Material.h  Model.h  OBBCollider.h  Object.cpp  Object.h  OrbitCamera.cpp  OrbitCamera.h  Plane.h  Point.cpp  Point.h  Quad.h  Raycast.cpp  Raycast.h  RigidBody.h  Screen.cpp  (+19 more)
Handmade/Data/: Config.ini
Handmade/Shaders/: Main.vert  Text.vert
Handmade/imgui/: imgui_impl_opengl3.cpp
Shaders/: Light.frag  Light.vert  LightNoMaterial.frag  Main.frag  Text.frag
src/: Axes.cpp  BoxCollider.cpp  BoxCollider.h  Buffer.cpp  Buffer.h  Camera.cpp  Capsule.cpp  Capsule.h  Circle.cpp  Design.cpp  Design.h  FreeCamera.h  Grid.cpp  Input.cpp  Input.h  Light.cpp  Light.h  Line.h  LineSegment.cpp  LineSegment.h  Main.cpp  Material.cpp  Material.h  Model.cpp  Model.h  OBBCollider.cpp  OBBCollider.h  Object.h  OrbitCamera.cpp  Plane.cpp  Plane.h  Point.h  Quad.cpp  Raycast.h  RigidBody.cpp  RigidBody.h  Screen.cpp  Screen.h  Shader.h  Sphere.h  (+9 more)
src/GLAD/: gl.c  gl.h
src/imgui/: imgui_impl_opengl3.h
